# image-binary-matrix

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py
include/: app.hpp  gui.hpp  std.hpp  utils.hpp
scripts/: build.py  consts.py  run.py  utils.py
src/: app.cpp  gui.cpp  main.cpp  utils.cpp  utils.hpp
